[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["StanislavSol <vandemar@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
colorama = "^0.4.6"
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
